--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "vue": "^3.3.4",
+    "vue-kinesis": "^2.0.5",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
