--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,43 +1,22 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
-
-on:
-  # Runs on pushes targeting the default branch
-  push:
-    branches: ["master"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
-jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v3
+            - name: Deploy Vue.js App to Github Pages
+  # You may pin to the exact commit or the version.
+  # uses: SerhiiKa/VuePagesAction@db267d0bd5edbdaf51b5a16130f061b10d165a7c
+  uses: SerhiiKa/VuePagesAction@1.0.4
+  with:
+    # Your username
+    username: 
+    # Your reponame
+    reponame: 
+    # Your Github token
+    token: 
+    # Your git commit email
+    gitemail: # optional, default is CI@example.com
+    # Your git commit name
+    gitname: # optional, default is CI
+    # Your git commit message
+    gitmsg: # optional, default is deploy
+    # Your custom domain
+    cname: # optional, default is none
+    # Use yarn to build
+    useyarn: # optional
+          
